--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -79,17 +79,12 @@ jobs:
       inputs:
         buildType: 'specific'
         project: $(System.TeamProject)
-        definition: '3'  # $(Build.DefinitionId)
+        definition: '8'  # $(Build.DefinitionId)
         buildVersionToDownload: 'latest'
         downloadType: 'single'
         artifactName: 'drop'
         downloadPath: '$(build.artifactstagingdirectory)' #'$(Build.SourcesDirectory)'
-    - task: CmdLine@2
-      inputs:
-          script: |
-            echo Hello world-2
-            echo  $(Build.SourcesDirectory)
-            echo Hello world-2
+   
     # Step 2: Copy Web API files to IIS server folder
     - task: ExtractFiles@1
       displayName: 'Extract published files'
@@ -101,15 +96,5 @@ jobs:
       inputs:
         SourceFolder: '$(build.artifactstagingdirectory)/extracted' #'$(buildOutputFolder)/webapi'
         Contents: '**'
-        TargetFolder: 'C:\inetpub\wwwroot\newfolder'  # Change this path to your IIS folder   
-    - task: CmdLine@2
-      inputs:
-          script: |
-            echo Artifact staging directory-Hello world-3
-            echo  $(Build.ArtifactStagingDirectory)
-            echo Hello world-3
-
-            echo Sources Directory- Hello world-3
-            echo  $(Build.SourcesDirectory)
-            echo Hello world-3
-...
+        TargetFolder: 'C:\inetpub\wwwroot\New folder'  # Change this path to your IIS folder   
+    
